--- a/Langchain.ipynb
+++ b/Langchain.ipynb
@@ -491,8 +491,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
