--- a/Prompt_Engineering/Prompt_engineering.ipynb
+++ b/Prompt_Engineering/Prompt_engineering.ipynb
@@ -7,7 +7,10 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
+    "\n",
+    "##while running use this command:\n",
+    "##os.environ[\"OPENAI_API_KEY\"] = \"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\""
    ]
   },
   {
